<?xml version="1.0"?>
<package format="2">
  <name>rplidar_cartographer</name>
  <version>0.0.1</version>
  <description>
    launch scripts for cartographer
  </description>
  <license>Apache 2.0</license>
  <author email="lifeofthanks@gmail.com">JeongBong Seo</author>
  <maintainer email="lifeofthanks@gmail.com">JeongBong Seo</maintainer>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
